# arm64_cmake_helloworld

./: CMakeLists.txt  README.md  hello.cpp
